news overflow fixing

--- a/themes/default/css/style.css
+++ b/themes/default/css/style.css
@@ -7,7 +7,7 @@
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
-	outline: none;
+	outline: 0;
 }
 ::-webkit-scrollbar {
 	width: 10px;
@@ -3307,7 +3307,7 @@ canvas[id^=chart_]{
 	color: #FF5722;
 }
 .xt_news .news_description {
-	max-height: 11em;
+	max-height: 8em;
 	overflow: hidden;
 	margin-bottom: 10px;
 }
@@ -3340,6 +3340,7 @@ canvas[id^=chart_]{
 	background: #fff;
 	box-shadow: 0 2px 3px -1px rgba(0,0,0,.1);
 	position: relative;
+	padding-bottom: 60px;
 }
 .news_item .news_description * {
 	font: normal normal 14px/1.4em "Roboto";
@@ -3359,7 +3360,7 @@ canvas[id^=chart_]{
 	color: #fff;
 }
 .news_item .news_date {
-	padding: 10px 10px 0px 10px;
+	padding: 0 10px;
 }
 .news_item .news_date p {
 	font-size: 12px;
